--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ env:
   EB_APPLICATION_NAME       :  "MyFlask"
   EB_ENVIROMENT_NAME        : "MyFlask-env"
   DEPLOY_PACKAGE_NAME       : "flask_app_${{ github.sha }} .zip"
-  AWS_REGION_NAME           : "us-AMERICA"
+  AWS_REGION_NAME           : "us-north"
 on:
   push:
     branches: 
@@ -24,4 +24,16 @@ jobs:
           run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
           
           
+        - name: Configure my AWS crendentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
+            aws-secret-access-key: ${{ secrets.MY_AWS_SECRET.KEY }}
+            aws-region           : ${{ env.AWS_REGION_NAME }}          
+          
+        - name: Copy Deployment package to S3 bucket
+          run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME }}/
+          
+        - name: Print Happy message for CI
+          run : echo "CI pipeline part finished Successfully!"
           
