--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
         - name: Copy Deployment package to S3 bucket
           run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME }}/
           
-        - name: Print Happy message for CI
+        - name: Print Happy message for CI nigga
           run : echo "CI pipeline part finished Successfully!"
           
